adição de três novenas.

--- a/src/main/webapp/includes/menu.xhtml
+++ b/src/main/webapp/includes/menu.xhtml
@@ -85,6 +85,36 @@
                         <p:menuitem value="Quaresma de São Miguel" outcome="quaresma-sao-miguel.xhtml?faces-redirect=true"/>
                         <p:menuitem value="Quaresma de São José" outcome="quaresma-sao-jose.xhtml?faces-redirect=true"/>
                     </p:submenu>
+
+                    <p:submenu label="🙏 Novenas">
+                        <p:submenu label="Novenas do Mês de Janeiro">
+                        </p:submenu>
+                        <p:submenu label="Novenas do Mês de Fevereiro">
+                        </p:submenu>
+                        <p:submenu label="Novenas do Mês de Março">
+                        </p:submenu>
+                        <p:submenu label="Novenas do Mês de Abril">
+                        </p:submenu>
+                        <p:submenu label="Novenas do Mês de Maio">
+                        </p:submenu>
+                        <p:submenu label="Novenas do Mês de Junho">
+                        </p:submenu>
+                        <p:submenu label="Novenas do Mês de Julho">
+                        </p:submenu>
+                        <p:submenu label="Novenas do Mês de Agosto">
+                        </p:submenu>
+                        <p:submenu label="Novenas do Mês de Setembro">
+                        </p:submenu>
+                        <p:submenu label="Novenas do Mês de Outubro">
+                            <p:menuitem value="Novena de Nossa Senhora da Conceição" outcome="novena-nossa-senhora-da-conceicao.xhtml?faces-redirect=true"/>
+                            <p:menuitem value="Novena de São Carlo Acutis" outcome="novena-sao-carlo-acutis.xhtml?faces-redirect=true"/>
+                            <p:menuitem value="Novena de São Carlo Acutis" outcome="novena-santa-teresa-de-jesus.xhtml?faces-redirect=true"/>
+                        </p:submenu>
+                        <p:submenu label="Novenas do Mês de Novembro">
+                        </p:submenu>
+                        <p:submenu label="Novenas do Mês de Dezembro">
+                        </p:submenu>
+                    </p:submenu>
                 </p:menubar>
 
             </p:panelGrid>
