adição de mais novenas e ajustes para organização em pastas.

--- a/src/main/webapp/includes/menu.xhtml
+++ b/src/main/webapp/includes/menu.xhtml
@@ -73,17 +73,17 @@
 
                 <p:menubar style="display: inline-block; margin-top: 10px;">
                     <p:submenu label="📿 Santo Terço">
-                        <p:menuitem value="Início" outcome="santo_terco.xhtml" />
-                        <p:menuitem value="Rezar as dezenas" outcome="santo_terco.xhtml" fragment="decadesContainer" />
-                        <p:menuitem value="Mistério do dia" outcome="santo_terco.xhtml" fragment="todayMystery" />
-                        <p:menuitem value="Tutorial" outcome="santo_terco.xhtml" fragment="tutorial" />
+                        <p:menuitem value="Início" outcome="/santo_terco.xhtml" />
+                        <p:menuitem value="Rezar as dezenas" outcome="/santo_terco.xhtml" fragment="decadesContainer" />
+                        <p:menuitem value="Mistério do dia" outcome="/santo_terco.xhtml" fragment="todayMystery" />
+                        <p:menuitem value="Tutorial" outcome="/santo_terco.xhtml" fragment="tutorial" />
                     </p:submenu>
 
-                    <p:menuitem value="📖 Liturgia" outcome="liturgia.xhtml?faces-redirect=true" />
+                    <p:menuitem value="📖 Liturgia" outcome="/liturgia.xhtml?faces-redirect=true" />
 
                     <p:submenu label="✝️ Quaresmas">
-                        <p:menuitem value="Quaresma de São Miguel" outcome="quaresma-sao-miguel.xhtml?faces-redirect=true"/>
-                        <p:menuitem value="Quaresma de São José" outcome="quaresma-sao-jose.xhtml?faces-redirect=true"/>
+                        <p:menuitem value="Quaresma de São Miguel" outcome="/quaresmas/quaresma-sao-miguel.xhtml?faces-redirect=true"/>
+                        <p:menuitem value="Quaresma de São José" outcome="/quaresmas/quaresma-sao-jose.xhtml?faces-redirect=true"/>
                     </p:submenu>
 
                     <p:submenu label="🙏 Novenas">
@@ -106,9 +106,16 @@
                         <p:submenu label="Novenas do Mês de Setembro">
                         </p:submenu>
                         <p:submenu label="Novenas do Mês de Outubro">
-                            <p:menuitem value="Novena de Nossa Senhora da Conceição" outcome="novena-nossa-senhora-da-conceicao.xhtml?faces-redirect=true"/>
-                            <p:menuitem value="Novena de São Carlo Acutis" outcome="novena-sao-carlo-acutis.xhtml?faces-redirect=true"/>
-                            <p:menuitem value="Novena de São Carlo Acutis" outcome="novena-santa-teresa-de-jesus.xhtml?faces-redirect=true"/>
+                            <p:menuitem value="Novena de Nossa Senhora da Conceição" outcome="/novenas-outubro/novena-nossa-senhora-da-conceicao.xhtml?faces-redirect=true"/>
+                            <p:menuitem value="Novena a Santa Margarida Maria Alacoque" outcome="/novenas-outubro/novena-santa-margarida-maria-alacoque.xhtml?faces-redirect=true"/>
+                            <p:menuitem value="Novena a Santa Teresa de Jesus" outcome="/novenas-outubro/novena-santa-teresa-de-jesus.xhtml?faces-redirect=true"/>
+                            <p:menuitem value="Novena a Santo Antônio de Sant'Ana Galvão" outcome="/novenas-outubro/novena-santo-antonio-santana-galvao.xhtml?faces-redirect=true"/>
+                            <p:menuitem value="Novena a Santo Inácio de Antioquia" outcome="/novenas-outubro/novena-santo-inacio-de-antioquia.xhtml?faces-redirect=true"/>
+                            <p:menuitem value="Novena a São Carlo Acutis" outcome="/novenas-outubro/novena-sao-carlo-acutis.xhtml?faces-redirect=true"/>
+                            <p:menuitem value="Novena a São Geraldo Majella" outcome="/novenas-outubro/novena-sao-geraldo-majella.xhtml?faces-redirect=true"/>
+                            <p:menuitem value="Novena a São João Paulo II" outcome="/novenas-outubro/novena-sao-joao-paulo-II.xhtml?faces-redirect=true"/>
+                            <p:menuitem value="Novena a São Pedro de Alcântara" outcome="/novenas-outubro/novena-sao-pedro-de-alcantara.xhtml?faces-redirect=true"/>
+                            <p:menuitem value="Novena a Todos os Santos" outcome="/novenas-outubro/novena-todos-os-santos.xhtml?faces-redirect=true"/>
                         </p:submenu>
                         <p:submenu label="Novenas do Mês de Novembro">
                         </p:submenu>
