adição das novenas de novembro.

--- a/src/main/webapp/includes/menu.xhtml
+++ b/src/main/webapp/includes/menu.xhtml
@@ -118,6 +118,11 @@
                             <p:menuitem value="Novena a Todos os Santos" outcome="/novenas-outubro/novena-todos-os-santos.xhtml?faces-redirect=true"/>
                         </p:submenu>
                         <p:submenu label="Novenas do Mês de Novembro">
+                            <p:menuitem value="Novena a Santa Catarina de Alexandria" outcome="/novenas-novembro/novena-a-santa-catarina-de-alexandria.xhtml?faces-redirect=true"/>
+                            <p:menuitem value="Novena a Cristo Rei" outcome="/novenas-novembro/novena-cristo-rei.xhtml?faces-redirect=true"/>
+                            <p:menuitem value="Novena a Nossa Senhora das Graças" outcome="/novenas-novembro/novena-da-apresentacao-de-nossa-senhora.xhtml?faces-redirect=true"/>
+                            <p:menuitem value="Novena à Imaculada Conceição de Maria" outcome="/novenas-novembro/novena-imaculada-conceicao-de-maria.xhtml?faces-redirect=true"/>
+                            <p:menuitem value="Novena da Apresentação de Nossa Senhora" outcome="/novenas-novembro/novena-nossa-senhora-das-gracas.xhtml?faces-redirect=true"/>
                         </p:submenu>
                         <p:submenu label="Novenas do Mês de Dezembro">
                         </p:submenu>
