adição das novenas de dezembro.

--- a/src/main/webapp/includes/menu.xhtml
+++ b/src/main/webapp/includes/menu.xhtml
@@ -141,6 +141,16 @@
                                         action="#{beanUtil.mudarPara('novenaApresentacaoNossaSenhoraBean')}"/>
                         </p:submenu>
                         <p:submenu label="Novenas do Mês de Dezembro">
+                            <p:menuitem value="Novena a Nossa Senhora de Guadalupe"
+                                        action="#{beanUtil.mudarPara('novenaNossaSenhoraGuadalupeBean')}"/>
+                            <p:menuitem value="Novena a Santa Luzia"
+                                        action="#{beanUtil.mudarPara('novenaSantaLuziaBean')}"/>
+                            <p:menuitem value="Novena a São João da Cruz"
+                                        action="#{beanUtil.mudarPara('novenaSaoJoaoCruzBean')}"/>
+                            <p:menuitem value="Novena de Natal de São Leão Magno"
+                                        action="#{beanUtil.mudarPara('novenaNatalSaoLeaoMagnoBean')}"/>
+                            <p:menuitem value="Novena a Sagrada Família"
+                                        action="#{beanUtil.mudarPara('novenaSagradaFamiliaBean')}"/>
                         </p:submenu>
                     </p:submenu>
                 </p:menubar>
