Add menu item for Santo Rosário

--- a/src/main/webapp/includes/menu.xhtml
+++ b/src/main/webapp/includes/menu.xhtml
@@ -79,6 +79,8 @@
                         <p:menuitem value="Tutorial" outcome="/santo_terco.xhtml" fragment="tutorial" />
                     </p:submenu>
 
+                    <p:menuitem value="🌹 Santo Rosário" outcome="/santo_rosario.xhtml?faces-redirect=true" />
+
                     <p:menuitem value="📖 Liturgia" outcome="/liturgia.xhtml?faces-redirect=true" />
 
                     <p:submenu label="✝️ Quaresmas">
