inserção das novenas de janeiro.

--- a/src/main/webapp/includes/menu.xhtml
+++ b/src/main/webapp/includes/menu.xhtml
@@ -85,6 +85,18 @@
 
                     <p:submenu label="🙏 Novenas">
                         <p:submenu label="Novenas do Mês de Janeiro">
+                            <p:menuitem value="Novena a Santo Antão"
+                                        action="#{beanUtil.mudarPara('novenaSantoAntaoBean')}"/>
+                            <p:menuitem value="Novena a São Francisco de Sales"
+                                        action="#{beanUtil.mudarPara('novenaSaoFranciscoSalesBean')}"/>
+                            <p:menuitem value="Novena a Santo Tomás de Aquino"
+                                        action="#{beanUtil.mudarPara('novenaSantoTomasAquinoBean')}"/>
+                            <p:menuitem value="Novena a São João Bosco"
+                                        action="#{beanUtil.mudarPara('novenaSaoJoaoBoscoBean')}"/>
+                            <p:menuitem value="Novena a Nossa Senhora das Candeias"
+                                        action="#{beanUtil.mudarPara('novenaNossaSenhoraCandeiasBean')}"/>
+                            <p:menuitem value="Novena para a Purificação de Nossa Senhora"
+                                        action="#{beanUtil.mudarPara('novenaPurificacao')}"/>
                         </p:submenu>
                         <p:submenu label="Novenas do Mês de Fevereiro">
                         </p:submenu>
