inserção das novenas de março

--- a/src/main/webapp/includes/menu.xhtml
+++ b/src/main/webapp/includes/menu.xhtml
@@ -110,6 +110,10 @@
                                 action="#{beanUtil.mudarPara('novenaSagradaFaceBean')}" />
                         </p:submenu>
                         <p:submenu label="Novenas do Mês de Março">
+                            <p:menuitem value="Novena de São José"
+                                action="#{beanUtil.mudarPara('novenaSaoJoseBean')}" />
+                            <p:menuitem value="Novena de Nossa Senhora da Anunciação"
+                                action="#{beanUtil.mudarPara('novenaNossaSenhoraAnunciacaoBean')}" />
                         </p:submenu>
                         <p:submenu label="Novenas do Mês de Abril">
                         </p:submenu>
